<resources>
    <string name="app_name">Innofuel</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="active_quests">Active Quests</string>

    <string name="task">Task:</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="duration">Duration</string>
    <string name="complete_before_specific_date">Complete before specific date</string>
    <string name="save">Save</string>
    <string name="reflect">Reflect</string>
    <string name="suggested_quests">Suggested Quests</string>
    <string name="add_event">Add Event</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reminder">Reminder</string>
    <string name="did_you_know">Did You Know?</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="timer_full30">30:00</string>
    <string name="start">Start</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_farm">Edit Farm</string>
    <string name="get_new_item">Get New Item</string>
    <string name="spend_5_coins">Spend 5 coins</string>
    <string name="click_to_spend_5_coins">Click to spend 5 coins</string>
    <string name="you_ve_received">You have received…</string>
    <string name="inventory">inventory</string>
    <string name="placed_items">placed items</string>
    <string name="no_coins">You do not have enough coins</string>


</resources>