<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddTaskFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/addTaskCard"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addEventTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/add_event"
                style="@style/thin_header_26"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="31dp"
                />

            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/addEventTextview"
                android:src="@drawable/ic_divider"
                android:layout_marginTop="19dp"
                />

            <ImageButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                app:layout_constraintTop_toTopOf="@id/addEventTextview"
                app:layout_constraintBottom_toBottomOf="@id/addEventTextview"
                android:layout_marginRight="13dp"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_exit"
                android:backgroundTint="@color/transparent"
                />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                android:layout_marginTop="13dp"
                android:hint="@string/title"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/ic_edittexttitlebackground"
                android:paddingLeft="15dp"
                style="@style/thin_header_text_light2"
                />

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendarSelector"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/titleEditText"
                android:layout_marginTop="15dp"
                app:mcv_arrowColor="@color/textlight2"
                app:mcv_tileHeight="48dp"
                app:mcv_headerTextAppearance="@style/thin_header_text_green_20"
                app:mcv_weekDayTextAppearance="@style/calendar_weekday"
                app:mcv_dateTextAppearance="@style/calendar_date"
                android:layout_marginHorizontal="10dp"

                />


            <Button
                android:id="@+id/saveButton"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/calendarSelector"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="21dp"
                android:layout_marginRight="31dp"
                android:backgroundTint="@color/highlightcolour"
                android:text="@string/save"
                style="@style/button_small"
                android:textAllCaps="false"
                android:paddingVertical="8dp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@id/saveButton"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>